# vertex-ai-agents

./: .gitignore  README.md  main.py  pyproject.toml
a2a-on-ae-multiagent/: .gitignore  README.md  main.py  pyproject.toml
a2a-on-ae-multiagent-langgraph/: README.md  pyproject.toml
a2a-on-ae-multiagent-langgraph/a2a_multiagent_mcp_app/a2a_agents/: .env.example  README.md  __init__.py  deploy_cocktail_langgraph_agent.ipynb  deploy_langgraph_host_agent.ipynb  deploy_weather_langgraph_agent.ipynb
a2a-on-ae-multiagent-langgraph/a2a_multiagent_mcp_app/a2a_agents/cocktail_agent/: __init__.py  agent.py  agent_executor.py  cocktail_agent_card.py  deploy_cocktail_langgraph_agent.ipynb  pyproject.toml
a2a-on-ae-multiagent-langgraph/a2a_multiagent_mcp_app/a2a_agents/common/: langgraph_base_mcp_agent.py  langgraph_base_mcp_agent_executor.py  langgraph_base_orchestrator_agent.py  langgraph_base_orchestrator_agent_executor.py  remote_connection.py
a2a-on-ae-multiagent-langgraph/a2a_multiagent_mcp_app/a2a_agents/hosting_agent/: .env.example  README.md  __init__.py  hosting_agent_card.py  langgraph_agent.py  langgraph_agent2.py  langgraph_agent_executor.py  langgraph_orchestrator_agent.py  langgraph_orchestrator_agent_executor.py  pyproject.toml  remote_connection.py
a2a-on-ae-multiagent-langgraph/a2a_multiagent_mcp_app/a2a_agents/weather_agent/: .env.example  agent.py  agent_executor.py  deploy_weather_langgraph_agent.ipynb  weather_agent_card.py
a2a-on-ae-multiagent-langgraph/a2a_multiagent_mcp_app/frontend/: README.md  main.py
a2a-on-ae-multiagent-langgraph/a2a_multiagent_mcp_app/mcp_servers/cocktail_mcp_server/: README.md  cocktail_server.py  test_server.py
a2a-on-ae-multiagent-langgraph/a2a_multiagent_mcp_app/mcp_servers/weather_mcp_server/: Dockerfile  pyproject.toml  test_server.py  weather_server.py
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/a2a_agents/: deploy_cocktail_agent.ipynb  deploy_hosting_agent.ipynb  deploy_weather_agent.ipynb
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/a2a_agents/cocktail_agent/: .env.example  README.md  cocktail_agent_card.py  cocktail_agent_executor copy.py  cocktail_agent_executor.py  cocktail_agent_executor2.py  deploy_cocktail_a2a_on_agent_engine.ipynb  pyproject.toml
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/a2a_agents/common/: adk_base_mcp_agent_executor.py  adk_orchestrator_agent.py  adk_orchestrator_agent_executor.py  agent_configs.py  auth_utils.py  remote_connection.py
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/a2a_agents/commons/: __init__.py  adk_base_mcp_agent_executor.py  adk_orchestrator_agent.py  adk_orchestrator_agent_executor.py
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/a2a_agents/hosting_agent/: .env.example  README.md  agent_executor.py  deploy_a2a_on_agent_engine.ipynb  hosting_agent_card.py  pyproject.toml
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/a2a_agents/hosting_agent_option1/: .env.example  agent_executor.py  deploy_a2a_on_agent_engine.ipynb  hosting_agent.py  hosting_agent_card.py  pyproject.toml  remote_connection.py
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/a2a_agents/hosting_agent_option2/: .env.example  README.md  pyproject.toml
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/a2a_agents/register_agent_to_agentspace/: register_agent_to_agentspace.ipynb
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/a2a_agents/weather_agent/: .env.example  README.md  deploy_weather_a2a_on_agent_engine.ipynb  weather_agent.py  weather_agent_card.py  weather_agent_executor.py  weather_agent_executor2.py
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/frontend/: README.md  main.py
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/frontend_option1/: .env.example  README.md  main.py  pyproject.toml
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/frontend_option2/: .env.example  README.md  pyproject.toml  register_to_agentspace.sh
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/mcp_servers/cocktail_mcp_server/: Dockerfile  README.md  test_server.py
a2a-on-ae-multiagent/a2a_multiagent_mcp_app/mcp_servers/weather_mcp_server/: README.md  test_server.py
(+78 files in other folders)
