[project]
name = "hosting-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "google-adk>=1.14.1",
    "google-auth-oauthlib>=1.2.2",
    "google-auth[openid]>=2.40.3",
    "google-cloud-aiplatform>=1.113.0",
    "google-genai>=1.36.0",
    "gradio>=5.46.1",
    "requests>=2.31.0",
]
