[project]
name = "hosting-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.5",
    "click>=8.2.1",
    "fastmcp>=2.12.3",
    "google-adk>=1.14.1",
    "google-auth-oauthlib>=1.2.2",
    "google-auth[openid]>=2.40.3",
    "google-cloud-aiplatform>=1.113.0",
    "google-genai>=1.36.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.46.1",
    "pip>=25.2",
    "requests>=2.31.0",
]
